# rf-mcp

./: .gitignore  Dockerfile  README.md  opencode.json  platynui_spy-0.1.0-cp310-abi3-macosx_11_0_arm64.whl  platynui_spy-0.1.0-cp310-abi3-manylinux_2_34_x86_64.whl  platynui_spy-0.1.0-cp310-abi3-win_amd64.whl  pyproject.toml  tasks.py  test_libdoc_integration.py  test_library_recommendations.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker-publish.yaml  e2e-weekly.yml
docker/: Dockerfile  Dockerfile.vnc  supervisord.conf
docs/: INSTRUCTION_TEMPLATES_GUIDE.md  INSTRUCTION_TEMPLATES_QUICKREF.md  INSTRUCTION_TEMPLATES_QUICKREF.txt  RELEASE_NOTES_v0.30.1.md  RELEASE_NOTES_v0.31.0.md  library-plugin-authoring.md  rf-mcp-0.31.0-libdoc.html  rf-mcp-0.31.0-libdoc.json  rf-mcp-0.31.1-libdoc.html  rf-mcp-0.31.1-libdoc.json  rf-mcp-0.31.2-libdoc.html  rf-mcp-0.31.2-libdoc.json  robotmcp.html
docs/adr/: ADR-019-bdd-data-driven-support.md  ADR-020-namespace-execution-architecture-alignment.md
docs/analysis/: bdd-quality-improvement-report.md
docs/proposals/: bdd-scenario-quality-improvement.md
docs/research/: bdd-generation-quality-research.md
examples/ailibrary/: 01_basic_usage.robot  02_recording_export.robot  03_retry_configuration.robot  04_provider_examples.robot  05_mixed_keywords.robot  06_form_testing.robot  README.md  ai_config.yaml
scripts/: run_bdd_e2e.sh  run_benchmarks.py  run_e2e_multi_cli.sh  run_optional_tests.py  view_e2e_metrics.py
src/robotmcp/: __init__.py  container.py  server.py
test_data/: books_and_authors.xml  books_authors.xml  dynamic_variables.py  invalid_syntax.py  static_variables.py  test_variables.json  test_variables.yaml
test_data/libs/: custom_lib.py
test_data/prompts/: api.md  web.md
test_data/resources/: sample.resource
tests/: __init__.py  conftest.py  test_basic_functionality.py  test_context_budget.py  test_get_library_documentation_e2e.py  test_mcp_comprehensive.py  test_mcp_error_scenarios.py  test_mcp_simple.py  test_plugins_basic.py  test_prometheus_metrics.py  test_suite_execution_paths.py
tests/ailibrary/: test_variable_assignment.robot
tests/baselines/: token_baselines.json
tests/benchmarks/: __init__.py  benchmark_e2e.py  benchmark_latency.py  benchmark_memory.py  benchmark_token_reduction.py  conftest.py  test_adr009_benchmarks.py  test_adr010_coercion_benchmarks.py  test_adr014_benchmarks.py  test_adr_benchmarks.py  test_instruction_benchmarks.py  test_instruction_token_impact.py  test_keyword_resolution_benchmark.py  test_learning_performance.py  (+4 more)
(+554 files in other folders)
