[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rf-mcp"
version = "0.21.0"
description = "Robot Framework MCP Server - Natural Language Test Automation Bridge"
authors = [{name = "Many Kasiriha"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "robotframework>=6.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "robotframework-seleniumlibrary",
    "robotframework-requests",
    "robotframework-databaselibrary",
    "robotframework-browser",
    "robotframework-appiumlibrary",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0"
]

desktop = [
    "platynui-spy; sys_platform == 'win32' or sys_platform == 'darwin' or sys_platform == 'linux'",
    "robotframework-platynui>=0.1.0",
    "pythonnet>=3.0.0",
    "robotframework-pythonlibcore>=4.4.0",
    "robotframework-assertion-engine>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/manykarim/rf-mcp"
Repository = "https://github.com/manykarim/rf-mcp"
"Bug Tracker" = "https://github.com/manykarim/rf-mcp/issues"
Documentation = "https://github.com/manykarim/rf-mcp#readme"

[project.scripts]
robotmcp = "robotmcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/robotmcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/robotmcp",
    "README.md",
    "pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.sources]
# Bundled platform-specific wheels for PlatynUI Spy bindings to simplify local development.
platynui-spy = [
    { path = "platynui_spy-0.1.0-cp310-abi3-win_amd64.whl", marker = "sys_platform == 'win32'" },
    { path = "platynui_spy-0.1.0-cp310-abi3-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin'" },
    { path = "platynui_spy-0.1.0-cp310-abi3-manylinux_2_34_x86_64.whl", marker = "sys_platform == 'linux'" },
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
desktop = [
    "platynui-spy; sys_platform == 'win32' or sys_platform == 'darwin' or sys_platform == 'linux'",
    "robotframework-platynui>=0.1.0",
    "pythonnet>=3.0.0",
    "robotframework-pythonlibcore>=4.4.0",
    "robotframework-assertion-engine>=3.0.0",
]
